# UsmileRobotCpp

./: CMakeLists.txt  README.md  main.cpp
ArmController/: ArmController.cpp  ArmController.h  CMakeLists.txt
ArmController/CodroidApi/: CMakeLists.txt  Main.cpp
ArmController/CodroidApi/include/: CodroidApi.h  Define.h  Request.h  RequestData.h  WebSocketClient.h
CalibrationManager/: CMakeLists.txt  CalibrationManager.cpp  CalibrationManager.hpp
CleaningEvaluator/: CMakeLists.txt  CleaningEvaluator.cpp  CleaningEvaluator.hpp
DeviceManager/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.hpp
ForceMonitor/: CMakeLists.txt  ForceMonitor.cpp  ForceMonitor.h
ForceMonitor/console_demo/: CMakeLists.txt  main.cpp
ForceMonitor/console_demo/include/: kw-common.h  kw-lib-all.h
ForceMonitor/console_demo/include/io/: kw-io.h
ForceMonitor/console_demo/include/platform/: platform.h
ForceMonitor/console_demo/include/sensor/: kw-sensor.h
ForceMonitor/console_demo/lib/linux_amd64/: main.cpp  serialRun.sh
GeometryPCL/: CMakeLists.txt  IcpFusion.cpp  icpFusion.hpp
Python/: ArmController.py  CalibrationManager.py  CleaningEvaluator.py  DeviceManager.py  ForceMonitor.py  Scanner.py  SystemStateMachine.py  TrajectoryPlanner.py  main.py
Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h  handicpuseful.py  handineyeCalibration.py
Scanner/TJST3DScannerApiSDK/Include/: RangeData.h  base.h  matrix44.h
Scanner/TJST3DScannerApiSDK/Lib/: TJST3DScannerApi.lib
SystemStateMachine/: CMakeLists.txt  SystemStateMachine.cpp  SystemStateMachine.hpp
TrajectoryPlanner/: CMakeLists.txt  TrajectoryPlanner.cpp  TrajectoryPlanner.hpp  pathtest9.py
Utils/CodroidApi/include/: RequestData.h
Utils/TJST3DScannerApiSDK/: 腾聚3D扫描SDK简易说明.docx
Utils/TJST3DScannerApiSDK/Dll/: systemset.ini
Utils/TJST3DScannerApiSDK/Include/: MatrixData.h  TJST3DScannerApi.h  box3.h  point3.h  point4.h
Utils/console_demo/include/protocol/: kw-protocol.h
Utils/console_demo/lib/linux_amd64/: makefile
Utils/console_demo/lib/windows_amd64/lib/: kw-cpp-lib.lib  kw-cpp-libd.lib
algorithmpdf/: 机械臂自动刷牙系统算法框架与流程设计.docx
force_controlcopy/: CMakeLists.txt  config.yaml  demo.cpp
force_controlcopy/cpplibrary/: CMakeLists.txt
force_controlcopy/cpplibrary/include/RobotUtilities/: spatial_utilities.h
force_controlcopy/cpplibrary/src/: spatial_utilities.cpp  timer_linux.cpp
force_controlcopy/include/force_control/: admittance_controller.h
force_controlcopy/src/: admittance_controller.cpp  config_deserialize.cpp
